PERSO ENV 1/src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Pct__c</fullName>
        <label>Discount_Pct</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>First_Maintenance_Date__c</fullName>
        <label>First Maintenance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Registration_Date__c</fullName>
        <label>First Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immatriculation__c</fullName>
        <label>Immatriculation</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <picklistValues>
                <fullName>ABX MODEL 01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABX MODEL 02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABX MODEL 03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABX MODEL 04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABX MODEL 05</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>Owner__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_HT__c</fullName>
        <label>Price HT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_TTC__c</fullName>
        <label>Price TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entretien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panne</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>